# ScanFinder

./: LICENSE  README.md  config.py  pyproject.toml  requirements.txt  scanfinder.py
src/: discovery.py  reporter.py  scanner.py  utils.py
